# coding-refresh

./: .gitignore  CLAUDE.md  CURRICULUM.md  README.md  RESOURCES.md  i-m-a-data-scientist-purrfect-quokka.md  plan.md  pyproject.toml  todo.txt
src/: agent_loop.py  extract.py  llm_client.py  retrieval.py
week-01/: README.md
week-01/katas/: README.md  kata1_clean_csv.py  kata2_aggregate.py  kata3_cli_summary.py  kata4_recursion.py  kata5_fix_the_bug.py  kata6_add_types.py  sample_numbers.txt  test_kata1_clean_csv.py  test_kata2_aggregate.py  test_kata3_cli_summary.py  test_kata4_recursion.py  test_kata5_fix_the_bug.py  test_kata6_add_types.py
week-02/: README.md  cli.py  test_llm_client.py
week-03/: README.md  test_extract.py
week-04/: COMPARISON.md  README.md  agent_framework.py  test_agent_loop.py
week-05/: README.md  test_retrieval.py
week-05/corpus/: feedback_001.md  feedback_002.md
week-06/: README.md
week-07/: README.md
week-08/: README.md
